feat(lost rate alert): 添加丢包率提醒功能
- 在.env文件中添加丢包率提醒配置项
- 修改easy-tier-tracer.py以支持丢包率提醒
- 新增Config类以加载丢包率相关配置
- 更新Device类的compare方法以根据配置决定是否启用丢包率提醒

--- a/.env
+++ b/.env
@@ -6,3 +6,11 @@ CHECK_INTERVAL_SECONDS=120
 WEB_HOOK_TEMPLATE=https://www.pushplus.plus/send?token=your-token-here&title=EasyTierTracer&content={{ ETT_MSG }}&template=html
 
 LOGGING_LEVEL=INFO
+
+# 丢包率提醒配置
+# LOSS_RATE_THRESHOLD: 丢包率提醒阈值（当丢包率大于该值时才考虑提醒）
+LOSS_RATE_THRESHOLD=0.02
+# LOSS_RATE_CHANGE_THRESHOLD: 相对变化率阈值（当相对变化大于该值时才提醒）
+LOSS_RATE_CHANGE_THRESHOLD=0.05
+# LOSS_RATE_ALERT_ENABLED: 是否启用丢包率提醒 (true/false)
+LOSS_RATE_ALERT_ENABLED=true
